--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 nom = "5"
-rand = "0.7.3"
+rand = { version = "0.8.5", features = ["std_rng"] }
 rustyline = "6.2.0"
-serenity = "0.8"
+serenity = "0.11"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
