--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ edition = "2018"
 nom = "5"
 rand = { version = "0.8.5", features = ["std_rng"] }
 rustyline = "9.1.2"
-serenity = "0.11"
+serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
