--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
+      with:
+        shared-key: "dice-roller"
     - name: Build
       run: cargo build --verbose
 
@@ -27,6 +29,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
+      with:
+        shared-key: "dice-roller"
     - name: Run tests
       run: cargo test --verbose
 
@@ -37,6 +41,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
+      with:
+        shared-key: "dice-roller"
     - name: Run fmt
       run: cargo fmt -- --check
 
@@ -47,5 +53,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
+      with:
+        shared-key: "dice-roller"
     - name: Run Clippy
       run: cargo clippy -- -D warnings
