--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "dice_roller"
 version = "0.1.0"
 authors = ["Edward Paget <ed.paget@gmail.com>"]
 edition = "2018"
+default-run = "dice-roller"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,6 +11,7 @@ edition = "2018"
 aws-sdk-dynamodb = "0.24.0"
 nom = "7"
 rand = { version = "0.8.5", features = ["std_rng"] }
+rust-i18n = "3.1.2"
 rustyline = "14.0.0"
 serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
