--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "dice_roller"
 version = "0.1.0"
 authors = ["Edward Paget <ed.paget@gmail.com>"]
 edition = "2018"
-default-run = "dice-roller"
+default-run = "dice_roller"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
