terraform: setup terraform and localstack

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -60,3 +60,13 @@ jobs:
         shared-key: "dice-roller"
     - name: Run Clippy
       run: cargo clippy -- -D warnings
+
+  lint-tf:
+    name: Lint Terraform
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: hashicorp/setup-terraform@v3
+    - name: Terraform fmt
+      id: fmt
+      run: terraform fmt -check
