--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,8 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  AWS_ACCESS_KEY_ID: key
+  AWS_SECRET_ACCESS_KEY: secret
 
 jobs:
   build:
@@ -32,6 +34,7 @@ jobs:
     - uses: Swatinem/rust-cache@v2
       with:
         shared-key: "dice-roller"
+    - uses: hoverkraft-tech/compose-action@v2.0.1
     - name: Run tests
       run: cargo test --verbose
 
