github: tag docker build with branch name
use that for task definition

--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -26,11 +26,14 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: dice-roller
-          IMAGE_TAG: ${{ github.sha }}
+          SHA_TAG: ${{ github.sha }}
+          BRANCH_TAG: ${{ github.ref_name }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker build \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:$SHA_TAG \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:$BRANCH_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$BRANCH_TAG"
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
@@ -47,3 +50,4 @@ jobs:
           service: prod-dice-roller
           cluster: dice-roller-prod
           wait-for-service-stability: true
+          force-new-deployment: true
