github: enable manual trigger of deployment

--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -2,12 +2,14 @@ name: Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - src/**/*.rs
       - locales/app.yml
       - Cargo.toml
       - Cargo.lock
+  workflow_dispatch: {}
 
 jobs:
   build:
