--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
+          role-to-assume: arn:aws:iam::311245061868:role/dice-roller-github-oidc-deployment-role
 
       - name: Login to Amazon ECR
         id: login-ecr
