--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: "x86_64-unknown-linux-musl"
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "dice-roller-release"
