--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -27,7 +27,10 @@ jobs:
         with:
           shared-key: "dice-roller-release"
       - name: Build
-        run: cargo build --release --verbose --target x86_64-unknown-linux-musl
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
+          cargo build --release --verbose --target x86_64-unknown-linux-musl
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
