--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -13,6 +13,7 @@ on:
       - locales/app.yml
       - Cargo.toml
       - Cargo.lock
+      - Dockerfile
   workflow_dispatch: {}
 
 jobs:
@@ -50,6 +51,7 @@ jobs:
           SHA_TAG: ${{ github.sha }}
           BRANCH_TAG: ${{ github.ref_name }}
         run: |
+          ls target/
           docker build \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:$SHA_TAG \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:$BRANCH_TAG .
