--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -4,6 +4,10 @@ permissions:
   id-token: write
   contents: read
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
