--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -13,11 +13,15 @@ on:
     branches:
       - main
     paths:
-      - src/**/*.rs
+      - roller_lang/**/*.rs
+      - roller_discord/**/*.rs
+      - roller_repl/**/*.rs
+      - roller_lang/Cargo.toml
+      - roller_discord/Cargo.toml
+      - roller_repl/Cargo.toml
       - locales/app.yml
       - Cargo.toml
       - Cargo.lock
-      - Dockerfile
   workflow_dispatch: {}
 
 jobs:
